# posish

./: .gitignore  LICENSE  Makefile.in  README.md  REVIEW_ROADMAP.md  THIRD_PARTY_NOTICES.md  config.h.in  config.mk.in  configure  configure.ac  posish.1
include/posish/: version.h
scripts/: append-metrics.sh  run-posix-fulltruth-contained.sh  run-posix-signal-contained.sh  sync-posix-checklist.sh  sync_yash_posix_tests.sh
src/: alias.c  alias.h  arena.c  arena.h  arith.c  arith.h  ast.h  case_command.c  case_command.h  compat.h  compound_parse.c  compound_parse.h  error.c  error.h  error_catalog.c  error_catalog.h  exec.c  exec.h  expand.c  expand.h  heredoc_command.c  heredoc_command.h  input.c  input.h  jobs.c  jobs.h  lexer.c  lexer.h  main.c  options.c  options.h  parser.c  parser.h  path.c  path.h  prompt.c  prompt.h  redir.c  redir.h  shell.c  (+7 more)
src/builtins/: builtin.h  netbsd_test.c  netbsd_test.h  netbsd_test_vendor.c  regular.c  special.c  test.c  test.h
tests/: KNOWN_FAILS.md  POSIX_CHECKLIST.md  POSIX_INTEGRITY_AUDIT_2026-03-03.md
tests/posix/: KNOWN_FAIL_M1.md  Makefile.in  README.md  arithshift-p.tst  diag-posish.tst  jobpipe-p.tst  jobspec-p.tst  loginexec.c  prompt-posish.tst  ptyfeed.c  pwd-p.tst  return-p.tst  run-test.sh  startup-posish.tst  trapcmdsub-p.tst
tests/posix/c/: command1  command2
tests/stress/: arena_growth_stress.sh  heredoc_pressure.sh
